# jwt_auth_service

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py  root.py
app/api/v1/: __init__.py  admin.py  auth.py  twofa.py  users.py
app/core/: config.py  config_ref.py  security.py
app/db/: __init__.py  crud.py  database.py  models.py  schemas.py
app/routers/: auth.py  users.py
app/utils/: cookie.py  exception.py  rsa.py
migrations/: env.py
migrations/versions/: 03fd5b3cd708_initial_migration.py
