[tool.poetry]
name = "autorizer"
version = "0.1.0"
description = ""
authors = ["Tirik8 <yaroslavsemenoviop@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
fastapi = "0.95.2"
uvicorn = "0.22.0"
sqlalchemy = "2.0.15"
pydantic = "1.10.7"
passlib = "1.7.4"
python-jose = "3.3.0"
python-multipart = "0.0.6"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
