[project]
name = "autorizer"
version = "0.1.0"
description = ""
authors = [{ name = "Tirik8", email = "yaroslavsemenoviop@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi>=0.115.12,<0.116",
    "uvicorn[standard]==0.22.0",
    "sqlalchemy==2.0.15",
    "python-jose==3.3.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "pydantic[email]>=2.11.3,<3",
    "pydantic-settings>=2.9.1,<3",
    "bcrypt==4.1.2",
    "passlib[argon2]>=1.7.4,<2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9,<0.12",
]

